@@ -64,7 +64,7 @@ public class StrictNumberFormatter extends NumberFormatter {
     /**
      * 
      */
-    @SuppressWarnings({ "unchecked", "rawtypes" })
+    @SuppressWarnings({ "rawtypes" })
     private void updateMinMax() {
         Comparable min = null;
         Comparable max = null;
@@ -93,14 +93,14 @@ public class StrictNumberFormatter extends NumberFormatter {
     }
 
 
-    @SuppressWarnings({ "unchecked", "rawtypes" })
+    @SuppressWarnings({ "rawtypes" })
     @Override
     public void setMaximum(Comparable max) {
         super.setMaximum(max);
         this.maxAsBig = max != null ? new BigDecimal(max.toString()) : null;
     }
     
-    @SuppressWarnings({ "unchecked", "rawtypes" })
+    @SuppressWarnings({ "rawtypes" })
     @Override
     public void setMinimum(Comparable minimum) {
         super.setMinimum(minimum);
@@ -140,22 +140,22 @@ public class StrictNumberFormatter extends NumberFormatter {
     private Object convertValueToValueClass(Object value, Class<?> valueClass) {
         if (valueClass != null && (value instanceof Number)) {
             if (valueClass == Integer.class) {
-                return new Integer(((Number)value).intValue());
+                return Integer.valueOf(((Number)value).intValue());
             }
             else if (valueClass == Long.class) {
-                return new Long(((Number)value).longValue());
+                return Long.valueOf(((Number)value).longValue());
             }
             else if (valueClass == Float.class) {
-                return new Float(((Number)value).floatValue());
+                return Float.valueOf(((Number)value).floatValue());
             }
             else if (valueClass == Double.class) {
-                return new Double(((Number)value).doubleValue());
+                return Double.valueOf(((Number)value).doubleValue());
             }
             else if (valueClass == Byte.class) {
-                return new Byte(((Number)value).byteValue());
+                return Byte.valueOf(((Number)value).byteValue());
             }
             else if (valueClass == Short.class) {
-                return new Short(((Number)value).shortValue());
+                return Short.valueOf(((Number)value).shortValue());
             }
         }
         return value;
